--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Desenvolvedor Front-end & UX/UI Designer Localizado no Rio Grande do Sul">
     <link rel="stylesheet" href="./estilo/style.min.css">
-    <link rel="shortcut icon" href="./favicon.svg" type="image/x-icon">
+    <link rel="icon" href="./favicon.svg" type="image/svg+xml">
     <title>Marcelo - Desenvolvedor e Designer</title>
 </head>
 <body>
