--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta name="description" content="Desenvolvedor Front-end & UX/UI Designer Localizado no Rio Grande do Sul">
     <link rel="stylesheet" href="./estilo/style.min.css">
     <link rel="icon" href="./favicon.svg" type="image/svg+xml">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@400;700&family=Marcellus+SC&display=swap" rel="stylesheet">
     <title>Marcelo - Desenvolvedor e Designer</title>
 </head>
 <body>
